Fixed some stuff with global-bans